--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+tokio = { version = "1.47.1", features = ["full"] }
+blake3 = "1.8.2"
+bincode = "1.3.3"
+notify = "8.2.0"
+serde = { version = "1.0.219", features = ["derive"] }
